k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: django-todo-deployment
   labels:
     app: django-todo
spec:
 replicas: 2
 selector:
   matchLabels:
    app: django-todo
 template:
   metadata:
    labels:
      app: django-todo
   spec:
    containers:
    - name: django-todo
      image: rajat545/todo
      ports:
      - containerPort: 8000
