k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-todo-service
  labels:
    app: django-todo
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 31000
  selector:
    app: django-todo
